--- a/src/onegov/feriennet/locale/fr_CH/LC_MESSAGES/onegov.feriennet.po
+++ b/src/onegov/feriennet/locale/fr_CH/LC_MESSAGES/onegov.feriennet.po
@@ -3217,8 +3217,8 @@ msgstr "Réservations pour ${period}"
 msgid "Billing for ${period}"
 msgstr "Facturation pour ${period}"
 
-#~ msgid "To my list"
-#~ msgstr "Vers ma liste"
+msgid "To my list"
+msgstr "Vers ma liste"
 
 #~ msgid "States"
 #~ msgstr "États"
